fix: horizontal scroll and timing error

--- a/components/Home/Billboard/Billboard.module.scss
+++ b/components/Home/Billboard/Billboard.module.scss
@@ -24,7 +24,7 @@
   .skylineGround {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 150%;
     left: 0;
     top: 99%;
     background-color: color.$waffle-dark-brown;
@@ -43,7 +43,7 @@
     height: 539px;
     z-index: 200;
     opacity: 0;
-    transition: 1s;
+    transition: opacity 1s;
 
     .bannerNavigator {
       position: relative;
@@ -100,8 +100,6 @@
       position: relative;
       width: 100%;
       height: 486px;
-      opacity: 1;
-      transition: 0.5s ease;
       overflow: hidden;
       .bannerSlots {
         position: relative;
@@ -109,7 +107,7 @@
         height: 100%;
         display: flex;
         flex-direction: row;
-        transition: 0.5s;
+        transition: 0.8s;
         transform: translateX(25%);
       }
       .banner {
